@@ -82,6 +82,16 @@ function synapse_index_content() {
 				<?php synapse_post_bar(); ?>
 			<!--End @iFeature post bar hook-->
 			
+			<?php if (is_attachment()) : ?>
+			
+			<div id="image_pagination">
+				<div class="image_wrap">
+					<div class="previous_image"> <?php previous_image_link( array( 100, 1000 ) ); ?></div>
+					<div class="next_image"><?php next_image_link( array( 100, 100 )); ?></div>
+				</div>
+			</div>
+			<?php endif; ?>
+			
 			<?php if (is_single()):?>
 			<?php comments_template(); ?>
 			<?php endif ?>
